# Repo-Description-Generator

./: MANIFEST.in  README.md  main.py  pyproject.toml  test_readme.md
description_generator/: __init__.py
description_generator/Knowledge/: README1.md
description_generator/Prompts/: Prompts.py
description_generator/Tools/: ProgrammingTools.py
